--- a/src/app/dashboard/stock-card/stock-card.component.html
+++ b/src/app/dashboard/stock-card/stock-card.component.html
@@ -1,1 +1,11 @@
-<p>stock-card works!</p>
+<div class="stock-card-container">
+  <div class="stock-info-container">
+    <h2>SANB11</h2>
+    <p>08/07/2019 15:25:36</p>
+  </div>
+
+  <div class="stock-value-container">
+    <span class="value">R$ 35,14</span>
+    <span class="variation">+ 0,25%</span>
+  </div>
+</div>
