--- a/src/app/dashboard/dashboard-page/dashboard-page.component.html
+++ b/src/app/dashboard/dashboard-page/dashboard-page.component.html
@@ -1,1 +1,12 @@
-<p>dashboard-page works!</p>
+<div class="container">
+  <app-stock-card></app-stock-card>
+  <app-stock-card></app-stock-card>
+  <app-stock-card></app-stock-card>
+  <app-stock-card></app-stock-card>
+  <app-stock-card></app-stock-card>
+  <app-stock-card></app-stock-card>
+  <app-stock-card></app-stock-card>
+  <app-stock-card></app-stock-card>
+  <app-stock-card></app-stock-card>
+  <app-stock-card></app-stock-card>
+</div>
