--- a/src/app/dashboard/stock-card/stock-card.component.html
+++ b/src/app/dashboard/stock-card/stock-card.component.html
@@ -1,11 +1,13 @@
-<div class="stock-card-container">
+<div class="stock-card-container" [class.negative-variation-border]="stock.variation < 0">
   <div class="stock-info-container">
-    <h2>SANB11</h2>
-    <p>08/07/2019 15:25:36</p>
+    <h2>{{stock.name}}</h2>
+    <p>{{stock.date}}</p>
   </div>
 
   <div class="stock-value-container">
-    <span class="value">R$ 35,14</span>
-    <span class="variation">+ 0,25%</span>
+    <span class="value">{{stock.price | currency:'BRL'}}</span>
+    <span class="variation" [class.negative-variation]="stock.variation < 0">
+      {{variation}}
+    </span>
   </div>
 </div>
