--- a/src/app/dashboard/stock-card/stock-card.component.css
+++ b/src/app/dashboard/stock-card/stock-card.component.css
@@ -4,13 +4,17 @@
   padding: 1rem;
   margin: 1rem;
   border-radius: 4px;
-  border-left: solid var(--positive-variation-color) 4px;
+  border-left: solid var(--positive-variation-color) 0.25rem;
   background-color: var(--secondary-color);
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+.negative-variation-border {
+  border-left-color: var(--negative-variation-color);
 }
 
 .stock-card-container:hover {
@@ -61,4 +65,8 @@
   align-self: flex-end;
   margin-top: 0.25rem;
   font-size: 0.875rem;
+}
+
+.stock-value-container .negative-variation {
+  background-color: var(--negative-variation-color);
 }
