--- a/src/app/dashboard/stock-card/stock-card.component.css
+++ b/src/app/dashboard/stock-card/stock-card.component.css
@@ -1,26 +1,3 @@
-.stock-card-container {
-  width: 21.375rem;
-  height: 13.8125rem;
-  padding: 1rem;
-  margin: 1rem;
-  border-radius: 4px;
-  border-left: solid var(--positive-variation-color) 0.25rem;
-  background-color: var(--secondary-color);
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
-}
-
-.negative-variation-border {
-  border-left-color: var(--negative-variation-color);
-}
-
-.stock-card-container:hover {
-  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-}
-
 .stock-info-container {
   width: 100%;
   display: flex;
@@ -69,4 +46,65 @@
 
 .stock-value-container .negative-variation {
   background-color: var(--negative-variation-color);
+}
+
+
+/* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
+.flip-card {
+  background-color: transparent;
+  width: 21.375rem;
+  height: 13.8125rem;
+  padding: 1rem;
+  margin: 0;
+  perspective: 1000px; /* Remove this if you don't want the 3D effect */
+}
+
+/* This container is needed to position the front and back side */
+.flip-card-inner {
+  border-radius: 4px;
+  border-left: solid var(--positive-variation-color) 0.25rem;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+.negative-variation-border {
+  border-left-color: var(--negative-variation-color);
+}
+
+/* Do an horizontal flip when you move the mouse over the flip box container */
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+
+/* Position the front and back side */
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  padding: 1rem;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden; /* Safari */
+  backface-visibility: hidden;
+}
+
+/* Style the front side (fallback if image is missing) */
+.flip-card-front {
+  background-color: rgb(255, 254, 254);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  border-radius: 4px;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+
+/* Style the back side */
+.flip-card-back {
+  border-radius: 4px;
+  color: var(--text-color);
+  background-color: rgb(255, 254, 254);
+  transform: rotateY(180deg);
 }
