--- a/src/app/dashboard/stock-card/stock-card.component.html
+++ b/src/app/dashboard/stock-card/stock-card.component.html
@@ -15,8 +15,7 @@
     </div>
     <div class="flip-card-back">
       <h1>{{stock.name}}</h1>
-      <p>Description</p>
-      <p>>Text description here<</p>
+      <p>{{stock.description}}</p>
     </div>
   </div>
 </div>
