--- a/src/app/shared/layout/header/header.component.css
+++ b/src/app/shared/layout/header/header.component.css
@@ -9,6 +9,12 @@
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
 
+.loader-container {
+  position: fixed;
+  width: 100%;
+  z-index: 99;
+}
+
 @media screen and (max-width: 768px) {
   .header {
     justify-content: center;
