--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -1,3 +1,6 @@
 <header class="header">
   <img src="assets/logoSantander.svg" alt="Logo" width="164px" height="auto">
 </header>
+<div *ngIf="loaderService.isLoading | async" class="loader-container">
+  <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+</div>
