--- a/src/app/dashboard/dashboard-page/dashboard-page.component.css
+++ b/src/app/dashboard/dashboard-page/dashboard-page.component.css
@@ -6,3 +6,17 @@
   flex-wrap: wrap;
   justify-content: center;
 }
+
+/* Material Progress bar*/
+::ng-deep .mat-progress-bar-fill::after {
+  background-color: var(--primary-color);
+}
+
+::ng-deep .mat-progress-bar-buffer {
+  background: #E4E8EB;
+}
+
+::ng-deep .mat-progress-bar {
+  border-radius: 2px;
+}
+/* Material Progress bar*/
