--- a/src/app/shared/layout/header/header.component.css
+++ b/src/app/shared/layout/header/header.component.css
@@ -8,10 +8,18 @@
   background-color: var(--primary-color);
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
-
+/* Progress bar */
 .loader-container {
   position: fixed;
   width: 100%;
+  z-index: 99;
+}
+
+/*Spinner*/
+.loader-container-spinner {
+  position: absolute;
+  width: 100%;
+  height: 100%;
   z-index: 99;
 }
 
