new user and css spiner fixed

--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -1,9 +1,9 @@
-<header class="header">
-  <img src="assets/logoSantander.svg" alt="Logo" width="164px" height="auto">
-</header>
 <div *ngIf="loaderService.isLoading | async" class="loader-container">
   <mat-progress-bar mode="indeterminate"></mat-progress-bar>
 </div>
+<header class="header">
+  <img src="assets/logoSantander.svg" alt="Logo" width="164px" height="auto">
+</header>
 <div *ngIf="loaderService.isLoading | async" class="loader-container-spinner">
-  <mat-spinner style="top: 40%; left: 50%;"></mat-spinner>
+  <mat-spinner></mat-spinner>
 </div>
