--- a/src/app/shared/layout/header/header.component.css
+++ b/src/app/shared/layout/header/header.component.css
@@ -18,13 +18,30 @@
 /*Spinner*/
 .loader-container-spinner {
   position: absolute;
-  width: 100%;
-  height: 100%;
-  z-index: 99;
+	top: 50%;
+	left: 50%;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	z-index: 99;
 }
 
 @media screen and (max-width: 768px) {
   .header {
     justify-content: center;
   }
+}
+
+@media(max-width:380px) {
+	.loader-container-spinner {
+		top: 45%;
+		left: 32%;
+	}
+}
+
+@media(max-width:1600px) {
+	.loader-container-spinner {
+		top: 45%;
+		left: 45%;
+	}
 }
